--- a/team/css/color.css
+++ b/team/css/color.css
@@ -12,4 +12,4 @@ div.popular{background-color: floralwhite;}
 div.newmenu{background-color: beige;}
 div.cake{background-color: floralwhite;}
 section.news{background-color: floralwhite;}
-footer#footer{background-color: slategray;}
+footer#footer{background-color: #ccc;}
