--- a/team/css/layout.css
+++ b/team/css/layout.css
@@ -17,7 +17,7 @@ section.news #newswrap .eventBox1{width:100%;height: auto;}
 
 section.event{width: 100%;height: 100px}
 div.share{max-width:1280px; margin:0 auto; height:100%;}
-footer#footer{width: 100%; height: 100px;margin: 0 auto; }
-footer .footerBox1{max-width: 1280px; margin: 0 auto; }
-footer .footerBox2{max-width: 1280px; margin: 0 auto;}
+footer#footer{width: 100%; height: 150px;margin: 0 auto; }
+footer .footerBox1{max-width: 1280px; margin: 0 auto; height:50px; }
+footer .footerBox2{max-width: 1280px; margin: 0 auto; height:100px;}
 
