--- a/team/css/style.css
+++ b/team/css/style.css
@@ -131,6 +131,7 @@ div.cakeBox{max-width:1280px;; margin: 0 auto;}
 }
 .news #newswrap .eventBox1 .event2 {
     width: 800px;
+    margin-left:20px;
     height: 300px;
 }
 .news #newswrap .eventBox1 .event2 img{
@@ -139,13 +140,14 @@ div.cakeBox{max-width:1280px;; margin: 0 auto;}
     border-radius: 30px 0 30px 0;
 }
 .news #newswrap .newsBox{
+    max-width:1280px;
     padding-top:30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 .news #newswrap .newsBox .notice{
-    width: 900px;
+    width:70%;
     background:#fff;
     height: 300px;
     border-radius: 30px 0 30px 0;
@@ -194,7 +196,8 @@ div.cakeBox{max-width:1280px;; margin: 0 auto;}
 
 
 .news #newswrap .newsBox .notice2{
-    width: 300px;
+    width: 25%;
+    margin-left:10px;
     height: 300px;
     background:#fff;
     border-radius: 0 30px 0 30px;
